--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,7 +1,7 @@
 <section class="flex flex-col gap-8">
     <h1 class="text-preset-1">Overview</h1>
 
-    <div class="w-full flex flex-col sm:flex-row gap-6">
+    <div class="w-full flex flex-col md:flex-row gap-6">
         <app-summary-block class="w-full bg-ds-grey-900 rounded-xl">
             <p class="text-preset-4 text-ds-beige-100">Current Balance</p>
             <p class="text-preset-1 text-ds-beige-100">$4,836.00</p>
@@ -16,12 +16,12 @@
         </app-summary-block>
     </div>
 
-    <div class="flex gap-6 flex-col md:flex-row">
-        <div class="flex flex-col w-full md:w-3/5 gap-6">
+    <div class="flex gap-6 flex-col lg:flex-row">
+        <div class="flex flex-col w-full lg:w-3/5 gap-6">
             <app-overview-pots></app-overview-pots>
             <app-overview-transactions></app-overview-transactions>
         </div>
-        <div class="flex flex-col w-full md:w-2/5 gap-6">
+        <div class="flex flex-col w-full lg:w-2/5 gap-6">
             <app-overview-budgets></app-overview-budgets>
             <app-overview-recurring-bills></app-overview-recurring-bills>
         </div>
