--- a/src/app/pots/pots.component.html
+++ b/src/app/pots/pots.component.html
@@ -7,9 +7,9 @@
         </button>
     </div>
 
-    <div class="flex flex-wrap gap-6">
+    <div class="flex flex-col lg:flex-row flex-wrap gap-6">
         @for (pot of pots; track pots.name; ) {
-            <div class="flex flex-col flex-wrap w-[calc(50%-12px)] rounded-xl bg-white p-6 gap-8">
+            <div class="flex flex-col flex-wrap w-full lg:w-[calc(50%-12px)] rounded-xl bg-white p-6 gap-8">
                 <div class="flex justify-between items-center">
                     <div class="flex gap-4 items-center">
                         <div class="w-4 h-4 rounded-full bg-[{{ pot.theme }}]"></div>
@@ -34,10 +34,10 @@
                 </div>
 
                 <div class="flex gap-4">
-                    <button class="bg-ds-beige-100 text-preset-4-bold rounded-lg flex justify-center items-center py-4 px-[70px] grow border border-transparent hover:bg-white hover:border hover:border-ds-beige-500 transition-all duration-500">
+                    <button class="bg-ds-beige-100 text-preset-4-bold rounded-lg flex justify-center items-center py-4 w-full grow border border-transparent hover:bg-white hover:border hover:border-ds-beige-500 transition-all duration-500">
                         + Add Money
                     </button>
-                    <button class="bg-ds-beige-100 text-preset-4-bold rounded-lg flex justify-center items-center py-4 px-[70px] grow border border-transparent hover:bg-white hover:border hover:border-ds-beige-500 transition-all duration-500">
+                    <button class="bg-ds-beige-100 text-preset-4-bold rounded-lg flex justify-center items-center py-4 w-full grow border border-transparent hover:bg-white hover:border hover:border-ds-beige-500 transition-all duration-500">
                         Withdraw
                     </button>
                 </div>
