--- a/src/app/recurring-bills/recurring-bills.component.html
+++ b/src/app/recurring-bills/recurring-bills.component.html
@@ -37,11 +37,21 @@
         <div class="flex flex-col w-full lg:w-[calc(66%-12px)] bg-white p-8 gap-6 rounded-xl">
 
             <div class="flex justify-between">
-                <input type="search" class="rounded-lg border w-1/2 border-ds-beige-500 py-3 px-5" placeholder="Search bills" />
+                <input type="search" placeholder="Search bills" class="rounded-lg border w-1/2 border-ds-beige-500 py-3 px-5"
+                    [value]="searchTerm"
+                    (input)="updateSearchTerm($event)"
+                />
                 <div class="flex gap-2 items-center">
                     <p class="text-preset-4 text-ds-grey-500">Sort by</p>
-                    <select class="rounded-lg border border-ds-beige-500 py-3 px-5">
-                        <option>Latest</option>
+                    <select class="rounded-lg border border-ds-beige-500 py-3 px-5"
+                        (change)="updateSortBy($event)"
+                    >
+                        <option value="latest">Latest</option>
+                        <option value="oldest">Oldest</option>
+                        <option value="a-to-z">A to Z</option>
+                        <option value="z-to-a">Z to A</option>
+                        <option value="highest">Highest</option>
+                        <option value="lowest">Lowest</option>
                     </select>
                 </div>
             </div>
@@ -56,7 +66,7 @@
                 </div>
             </div>
 
-            @for (bill of recurringBills; track bill.name; let first = $first) {
+            @for (bill of filteredRecurringBills(); track bill.name; let first = $first) {
 
                 <div class="w-full h-[1px] bg-[#696868] opacity-15"></div>
 
