fixed visual glitch when minimizing sidebar

--- a/src/app/navigation/nav-element/nav-element.component.html
+++ b/src/app/navigation/nav-element/nav-element.component.html
@@ -1,5 +1,5 @@
 <div 
-    class="flex flex-col lg:flex-row w-[68px] md:w-[104px] lg:w-[276px] h-[44px] md:h-[66px] lg:h-14 justify-center items-center lg:justify-start gap-1 lg:pl-8 text-center text-preset-5-bold lg:text-preset-3 text-ds-grey-300 lg:gap-4 rounded-t-lg lg:rounded-tl-none lg:rounded-r-[12px] hover:text-ds-grey-100 transition-all duration-300" 
+    class="flex flex-col lg:flex-row w-[68px] md:w-[104px] lg:w-full h-[44px] md:h-[66px] lg:h-14 justify-center items-center lg:justify-start gap-1 lg:pl-8 text-center text-preset-5-bold lg:text-preset-3 text-ds-grey-300 lg:gap-4 rounded-t-lg lg:rounded-tl-none lg:rounded-r-[12px] hover:text-ds-grey-100 transition-all duration-300" 
     routerLinkActive="bg-ds-beige-100 text-ds-grey-900 border-b-4 lg:border-b-0 lg:border-l-4 border-ds-green hover:text-ds-grey-900"
     [routerLinkActiveOptions]="{ exact: true }"
 >
