--- a/src/app/budgets/addnewbudgetmodal/addnewbudgetmodal.component.html
+++ b/src/app/budgets/addnewbudgetmodal/addnewbudgetmodal.component.html
@@ -2,7 +2,7 @@
     [ngClass]="showNewBudgetModal() === true ? 'block' : 'hidden'"
     (click)="closeOnOutsideClick($event)"
 >
-    <div class="w-[560px] h-[490px] bg-white rounded-xl p-8 flex flex-col gap-5">
+    <div class="w-[560px] h-[490px] bg-white rounded-xl p-8 flex flex-col gap-5 transition-all">
         <div class="flex justify-between items-center">
             <h1 class="text-preset-1 text-ds-grey-900">Add New Budget</h1>
             <img src="/images/icon-close-modal.svg" alt="icon-close-modal" class="hover:cursor-pointer" (click)="closeNewBudgetModal()" />
