--- a/src/app/pots/pots.component.html
+++ b/src/app/pots/pots.component.html
@@ -15,7 +15,23 @@
                         <div class="w-4 h-4 rounded-full bg-[{{ pot.theme }}]"></div>
                         <h2 class="text-preset-2 text-ds-grey-900">{{ pot.name }}</h2>
                     </div>
-                    <img src="/images/icon-ellipsis.svg" alt="ellipsis-icon" class="hover:cursor-pointer"/>
+
+                    <div class="relative">
+                        <img src="/images/icon-ellipsis.svg" alt="icon-ellipsis" class="hover:cursor-pointer" (click)="openPotOptions(pot.name)"/>
+
+                        <div class="absolute top-4 right-0 w-[138px] h-[91px] flex flex-col bg-white rounded-lg py-3 px-5 border border-ds-grey-300 gap-3 z-50"
+                            [ngClass]="selectedPot === pot.name ? 'block' : 'hidden'"
+                        >
+                            <p class="text-preset-4 text-ds-grey-900 hover:cursor-pointer" (click)="openEditPotModal(pot.name)">
+                                Edit Pot
+                            </p>
+                            <hr/>
+                            <p class="text-preset-4 text-ds-red hover:cursor-pointer" (click)="openDeletePotModal(pot.name)">
+                                Delete Pot
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="flex flex-col gap-4">
