--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -123,14 +123,14 @@
                     </div>
 
                     <div class="md:hidden flex justify-between items-center">
-                        <div class="flex w-3/4 gap-[6px] items-center">
+                        <div class="flex w-2/3 gap-[6px] items-center">
                             <img src="{{ transaction.avatar }}" alt="{{ transaction.name }}" class="rounded-full w-8 h-8"/>
                             <div class="flex flex-col">
                                 <p class="text-preset-4-bold text-ds-grey-900">{{ transaction.name }}</p>
-                                <p class="text-preset-5 text-ds-grey-500 w-1/2">{{ transaction.category }}</p>
+                                <p class="text-preset-5 text-ds-grey-500">{{ transaction.category }}</p>
                             </div>
                         </div>
-                        <div class="flex flex-col w-1/4  items-end">
+                        <div class="flex flex-col w-1/3 items-end">
                             <p class="text-preset-4-bold"
                                 [ngClass]="transaction.amount > 0 ? 'text-ds-green' : 'text-ds-grey-900'"
                             >
@@ -143,9 +143,9 @@
             </div>
         </div>
 
-        <div class="flex justify-between pt-6 gap-3">
+        <div class="flex justify-between items-center pt-6 gap-3">
             <button 
-                class="flex py-3 px-4 border items-center rounded-lg gap-4 transition-all duration-300"
+                class="flex py-3 px-4 w-10 h-10 border items-center rounded-lg gap-4 transition-all duration-300"
                 (click)="pageinationBack()"
                 [disabled]="pages.length > 1 ? false : true"
                 [ngClass]="pages.length > 1 ? 'group hover:bg-ds-beige-500' : null"
@@ -153,18 +153,19 @@
                 <img src="/images/icon-caret-left.svg" alt="caret-left" />
                 <p class="hidden md:block text-preset-4 text-ds-grey-900 group-hover:text-white transition-all duration-300">Prev</p>
             </button>
-            <div class="flex gap-2">
+            <div class="flex flex-wrap justify-center gap-2">
+                @for (page of pages; track $index) {
                 <button
-                    *ngFor="let page of pages" 
                     class="rounded-lg w-10 h-10 flex justify-center items-center border transition-all duration-300"
                     [ngClass]="page * 10 === pageination[0] ? 'text-white bg-ds-grey-900 hover:cursor-default' : 'hover:bg-ds-beige-500 hover:text-white hover:cursor-pointer'"
                     (click)="pageinationButton(page*10, page*10+10)"
                 >
                     {{ page + 1 }}
                 </button>
+                }
             </div>
             <button 
-                class="flex py-3 px-4 border items-center rounded-lg gap-4 transition-all duration-300"
+                class="flex py-3 px-4 w-10 h-10 border items-center rounded-lg gap-4 transition-all duration-300"
                 (click)="pageinationNext()"
                 [disabled]="pages.length > 1 ? false : true"
                 [ngClass]="pages.length > 1 ? 'group hover:bg-ds-beige-500' : null"
